# querydown

./: Cargo.toml  LICENSE  README.md
bindings/js/: Cargo.toml  LICENSE  README.md
bindings/js/src/: lib.rs
branding/: README.md
cli/: Cargo.toml
cli/src/: main.rs
compiler/: Cargo.toml
compiler/resources/test/: issue_schema.dbml  issue_schema.json
compiler/src/: lib.rs  options.rs
compiler/src/compiler/: comparisons.rs  compiler.rs  constants.rs  expr.rs  functions.rs  join_tree.rs  mod.rs  rendering.rs  result_columns.rs  scope.rs  sorting.rs
compiler/src/compiler/paths/: clarification.rs  ctes.rs  mod.rs
compiler/src/errors/: msg.rs
compiler/src/schema/: chain.rs  links.rs  schema.rs
compiler/src/sql/: dialect.rs  mod.rs  postgres.rs  tokens.rs  tree.rs
compiler/src/sql/expr/: build.rs  expr.rs  mod.rs
compiler/src/tests/: corpus.md  corpus.rs  mod.rs  test_utils.rs
compiler/src/utils/: mod.rs
core/: Cargo.toml
core/resources/test/: issue_schema.diagram.odg  library_schema.json
core/src/: compiler.rs  constants.rs  converters.rs  lib.rs  options.rs  rendering.rs  sql_tree.rs  syntax_tree.rs  tokens.rs
core/src/compiling/: compiler.rs  constants.rs  join_tree.rs  mod.rs  scope.rs  sorting.rs  sql_tree.rs
core/src/compiling/conversion/: conditions.rs  expressions.rs  mod.rs  paths.rs  sorting.rs
core/src/compiling/rendering/: functions.rs  join_tree.rs  mod.rs  rendering.rs
core/src/dialects/: dialect.rs  postgres.rs  sql.rs
core/src/errors/: msg.rs
core/src/parsing/: column_layout.rs  conditions.rs  expressions.rs  mod.rs  molecule.rs  paths.rs  query.rs  utils.rs  values.rs
core/src/schema/: chain.rs  mod.rs  schema.rs
core/src/tests/: corpus.md  corpus.rs  mod.rs
core/src/utils/: flex_map.rs  mod.rs
docs/: cheat-sheet.md  design.md  functions.md  language.md  lql-design.md  setup.md  syntax-cheat-sheet.md
docs/example-schemas/: issue-tracker.yaml  library.yaml  logistics.yaml
parser/: Cargo.toml
parser/src/: ast.rs  lib.rs  tokens.rs
parser/src/parser/: column_layout.rs  mod.rs  query.rs  utils.rs
parser/src/parser/expr/: comparison.rs  condition_set.rs  (+8 more)
resources/test/: issue_schema.diagram.odg  issue_schema.json
site/: .prettierrc  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
site/scripts/: preinstall.sh
site/src/: app.html
site/src/components/: Header.svelte
site/src/icons/: BrandName.svelte  GitHub.svelte  Logo.svelte  Spinner.svelte
site/src/routes/: +layout.svelte  +page.svelte  global.css
src/: ast.rs  chain.rs  compiler.rs  constants.rs  context.rs  converters.rs  error.rs  main.rs  rendering.rs  schema.rs  sql_tree.rs  syntax_tree.rs  tokens.rs
src/dialects/: dialect.rs  mod.rs  postgres.rs  sql.rs
src/engines/: engine.rs  mod.rs  postgres.rs
src/parsing/: column_layout.rs  conditions.rs  duration.rs  expression_or_condition_set.rs  expressions.rs  mod.rs  molecule.rs  paths.rs  query.rs  transformation.rs  utils.rs  values.rs
src/schema/: chain.rs  links.rs  mod.rs  primitive_schema.rs  schema.rs
src/tests/: corpus.md  corpus.rs  corpus_todo.md  test_utils.rs
src/tests/mocks/: issue_schema.rs  library_schema.rs  mod.rs
(+11 files in other folders)
