[package]
name = "querydown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8.0"
clap = { version = "4.1.4", features = ["derive"] }
itertools = "0.10.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
