[package]
name = "querydown-cli"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Sean Colsen <colsen.sean@gmail.com>"]
repository = "https://github.com/seancolsen/querydown"
description = "A command line interface for the Querydown language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
querydown = { version = "0.0.1", path = "../compiler" }
clap = { version = "4.4.11", features = ["derive"] }

# We override the name of the binary for src/main.rs, which otherwise would be
# querydown-cli (matching the crate name).
[[bin]]
name = "querydown"
path = "src/main.rs"
