[package]
name = "querydown"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Sean Colsen <colsen.sean@gmail.com>"]
repository = "https://github.com/seancolsen/querydown"
description = "An expressive DSL for writing relational database queries that compile to SQL"

[dependencies]
querydown-parser = { version = "0.0.1", path = "../parser" }
itertools = "0.10.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
testcase-markdown = "0.0.1"
toml = "0.7.3"

