[package]
name = "querydown"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Sean Colsen <colsen.sean@gmail.com>"]
repository = "https://github.com/seancolsen/querydown"
description = "An expressive DSL for writing relational database queries that compile to SQL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8.0"

itertools = "0.10.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
testcase-markdown = "0.0.1"

[profile.release]
lto = true
opt-level = 'z'
